--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Добро пожаловать!</title>
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
 	</head>
 	<body>
 		<div style = "color:green">
