--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 	<head>
 		<title>Добро пожаловать!</title>
         <script src="https://telegram.org/js/telegram-web-app.js"></script>
+        <style>
+            body {
+                background-color: var(--tg-theme-bg-color);
+                color: var(--tg-theme-text-color);
+            }
+        </style>
 	</head>
 	<body>
 		<div style = "color:green">
