--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Добро пожаловать!</title>
-        <script src="https://telegram.org/js/telegram-web-app.js"></script>
-        <style>
-            body {
-                background-color: var(--tg-theme-bg-color);
-                color: var(--tg-theme-text-color);
-            }
-        </style>
-	</head>
-	<body>
-		<div style = "color:green">
-		Добро пожаловать!
-        </div>
-	</body>
+  <head>
+    <title>Добро пожаловать!</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <style>
+      body {
+        background-color: var(--tg-theme-bg-color);
+        color: var(--tg-theme-text-color);
+      }
+    </style>
+  </head>
+  <body>
+    <div id="hello" style="color: green">Добро пожаловать!</div>
+    <script>
+      {
+        let tg = window.Telegram.WebApp; //получаем объект webapp телеграма
+
+        tg.expand(); //расширяем на все окно
+        document.getElementById(
+          "hello"
+        ).innerText = `Добро пожаловать, ${tg.initDataUnsafe.user.first_name}
+${tg.initDataUnsafe.user.last_name}
+${tg.initDataUnsafe.user.username}! (${tg.initDataUnsafe.user.language_code})`;
+      }
+    </script>
+  </body>
 </html>
