Убрал стиль заголовка

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <div id="hello" style="color: green">Добро пожаловать!</div>
+    <div id="hello">Добро пожаловать!</div>
     <script>
       {
         let tg = window.Telegram.WebApp; //получаем объект webapp телеграма
