Добавил отложенный вызов талона

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           if (timeForCall > 0) {
             setTimeout(() => {
               timeForCall--;
+              callTalon();
             }, 1000);
             return;
           }
